# CMR-Project-2022-2023

./: .clang-format  .gitignore  README.md
bagfiles/: plotBagFiles.py
devel/: .catkin  .rosinstall
src/: parameters.hpp  rosConfig.hpp
src/car_simulator/: CMakeLists.txt  package.xml
src/car_simulator/config/: parameters.hpp
src/car_simulator/include/: models.hpp  simulator.hpp
src/car_simulator/launch/: car_simulator.launch  test_car_simulator.launch
src/car_simulator/src/: simulator.cpp  test.cpp  testInputs.cpp
src/car_traj_ctrl/: (temp)CMakeLists.txt  (temp)package.xml  CMakeLists.txt  package.xml
src/car_traj_ctrl/launch/: car_traj_ctrl.launch
src/car_traj_ctrl/src/: controller.cpp
src/project_msgs/: CMakeLists.txt  package.xml
src/project_msgs/msg/: ControllerInputMessage.msg  SimulatorStateMessage.msg  tm.msg
