<?xml version="1.0"?>
<package format="2">
  <name>car_traj_ctrl</name>
  <version>0.0.0</version>
  <description>The car_traj_ctrl package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jesperek@todo.todo">jesperek</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- BUILD AND EXPORT DEPENDENCIES -->
  <depend>roscpp</depend>
  <!-- <depend>rospy</depend> -->
  <!-- <depend>std_msgs</depend> -->
  <depend>project_msgs</depend>

  <!-- BUILD DEPENDENCIES -->

  <!-- EXPORT DEPENDENCIES -->

  <!-- EXECUTION DEPENDENCIES -->
  <!-- <exec_depend>project_msgs</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
